@@ -1,3 +1,10 @@
 
 
-\score{ \notes {[g'' <e'''8 g> g''] }}
+\score{ \notes {g''4 [<e'''8 g> g'']
+\notes\relative c'{
+   \times 2/3{[d16 fis' d,]} \times 2/3{[cis g'' cis,,]}
+  a'16 cis a, g''' % Used to give a nice beam directed upwards.
+  <{\stemUp a,,4:32} \context Voice=lower{\stemDown d,:32}>
+
+}
+	    }}
