@@ -10,6 +10,7 @@
 #include "stem.hh"
 #include "rhythmic-head.hh"
 #include "engraver.hh"
+#include "note-column.hh"
 
 class Script_engraver : public Engraver
 {
@@ -132,10 +133,6 @@ Script_engraver::acknowledge_grob (Grob_info inf)
 	{
 	  Grob *e = script_p_arr_[i];
 	  
-	  if (!e->get_parent (X_AXIS))
-	    {
-	      e->set_parent (inf.grob_l_, X_AXIS);
-	    }
 	  if (Side_position_interface::get_axis (e) == X_AXIS
 	      && !e->get_parent (Y_AXIS))
 	    {
@@ -144,7 +141,29 @@ Script_engraver::acknowledge_grob (Grob_info inf)
 	    }
 	  Side_position_interface::add_support (e,inf.grob_l_);
 	}
-    }  
+    }
+  else if (Note_column::has_interface (inf.grob_l_))
+    {
+
+      /*
+	We make note column the parent of the script. That's not
+	correct, but due to seconds in a chord, noteheads may be
+	swapped around horizontally. We don't know which note head to
+	put it on, so we postpone this decision to
+	Script_interface::before_line_breaking ().
+ 
+       */
+      for (int i=0; i < script_p_arr_.size (); i++)
+	{
+	  Grob *e = script_p_arr_[i];
+	  
+	  if (!e->get_parent (X_AXIS) &&
+	      Side_position_interface::get_axis (e) == Y_AXIS)
+	    {
+	      e->set_parent (inf.grob_l_, X_AXIS);
+	    }
+	}
+    }
 }
 
 void
@@ -180,6 +199,6 @@ ENTER_DESCRIPTION(Script_engraver,
 /* descr */       "    Handles note ornaments generated by @code{\\script}.  
 ",
 /* creats*/       "Script",
-/* acks  */       "stem-interface rhythmic-head-interface",
+/* acks  */       "stem-interface rhythmic-head-interface note-column-interface",
 /* reads */       "scriptDefinitions scriptHorizontal",
 /* write */       "");
